修改index.html和index-cn.html文件

--- a/index-cn.html
+++ b/index-cn.html
@@ -1020,7 +1020,7 @@ megamenu-back-btn {
 <div  id='write'  class = ''><div class="header" align="right" style="display: block; font-weight: bold;">
     <ul style="line-height: 26px; border: 0; box-sizing: border-box; font-size: 16px;">
         <li style=" display: inline-block;">
-            <a href="https://david-deng.cn/" style="font-weight: bold;" alt="Home">首页</a>
+            <a href="https://test.david-deng.cn/" style="font-weight: bold;" alt="Home">首页</a>
         </li>
         <li style=" display: inline-block;">
             <a href="https://github.com/david-deng-01" style="font-weight: bold;" target="_blank" alt="Github">Github</a>
